NetBSD Problem Report #50915

From www@NetBSD.org  Tue Mar  8 20:00:56 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F3AAD7ACBD
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  8 Mar 2016 20:00:55 +0000 (UTC)
Message-Id: <20160308200055.2B0B27ACC3@mollari.NetBSD.org>
Date: Tue,  8 Mar 2016 20:00:55 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/distrib/cdrom/macppc_installboot/cd9660_util.c:122: size_t >= 0 ?
X-Send-Pr-Version: www-1.0

>Number:         50915
>Category:       misc
>Synopsis:       src/distrib/cdrom/macppc_installboot/cd9660_util.c:122: size_t >= 0 ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    misc-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Mar 08 20:05:00 +0000 2016
>Closed-Date:    Wed Mar 09 07:49:38 +0000 2016
>Last-Modified:  Wed Mar 09 07:49:38 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160308
>Organization:
>Environment:
>Description:
Source code is

           for (i = 0; --fnlen >= 0; i = i * 10 + *fn++ - '0') {

but

isofncmp(const u_char *fn, size_t fnlen, const u_char *isofn, size_t isolen,
    int joliet_level)

You might also want to fix these two little errors, while you are
changing the file

[src/distrib/cdrom/macppc_installboot/cd9660_util.c:102]: (warning) %d in format string (no. 2) requires 'int' but the argument type is 'size_t {aka unsigned long}'.
[src/distrib/cdrom/macppc_installboot/cd9660_util.c:102]: (warning) %d in format string (no. 4) requires 'int' but the argument type is 'size_t {aka unsigned long}'.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50915 CVS commit: src/distrib/cdrom/macppc_installboot
Date: Tue, 8 Mar 2016 15:16:56 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Tue Mar  8 20:16:56 UTC 2016

 Modified Files:
 	src/distrib/cdrom/macppc_installboot: cd9660_util.c

 Log Message:
 PR/50915: David Binderman: Fix infinite loop and printf format.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/distrib/cdrom/macppc_installboot/cd9660_util.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 09 Mar 2016 07:49:38 +0000
State-Changed-Why:
Christos fixed it, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.