PR/50915: David Binderman: Fix infinite loop and printf format.